--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,6 +3,9 @@
   <head>
     <title>Sample</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
       <style>
         
         h1 {
@@ -122,8 +125,9 @@
     <section>
       <nav>
         <ul>
+          <!-- home button  -->
           
-          <li> <button style="background-color: rgba(18,14,9,0.4); border:           rgba(18,13,9.0.4); writing-mode: rtl;
+          <li> <button  type="button" class="btn btn-success" style="background-color: rgba(18,14,9,0.4); border:           rgba(18,13,9.0.4); writing-mode: rtl;
                  align: right;
                 width: 150px;
                 font-size: 20px;
@@ -132,7 +136,9 @@
             border-end-start-radius: 25px;
             border-inline-end: 8px solid green"><a href="#" style="color: black">    Home   </a></button> </li>
           <br/>
-          <li><button style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
+          <!-- about site button -->
+          
+          <li><button type="button" class="btn btn-outline-primary" style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
                 align: right;
                  width: 150px;
                 font-size: 20px;
@@ -141,7 +147,9 @@
             border-end-start-radius: 25px;
             border-inline-end: 8px solid green"> <a href="#" style="color: black"> About Site</a></button> </li>
           <br/>
-            <li><button style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
+          <!-- information button  -->
+          
+            <li><button type="button" class="btn btn-info" style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
                   align: right;
                   width: 150px;
                   font-size: 20px;
@@ -150,14 +158,16 @@
             border-end-start-radius: 25px;
             border-inline-end: 8px solid green"> <a href="#" style="color: black" "Link without underline">Information </a></button> </li>
           <br/>
-              <li><button style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
+          <!-- Application -->
+          
+              <li><button type="button" class="btn btn-outline-secondary" style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
                     align: right;
                     width: 150px;
                     font-size: 20px;
             border-right-width: thin;
             border-bottom-width: thin;
             border-end-start-radius: 25px;
-            border-inline-end: 8px solid green"> <a href="#" style="color: black" "Link without underline">Application</a></button> </li>
+            border-inline-end: 8px solid green"> <a href="#" style="color: black" >Application</a></button> </li>
           <br/>
         </ul>
       </nav>
@@ -179,7 +189,26 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-    </button>
+      <br/>
+      </button>
+
+      <hr>
+      <br/>
+      <button style="background-color: rgba(18,14,9,0.4); border: rgba(18,13,9.0.4); writing-mode: rtl;
+        border-right-width: thin;
+        border-bottom-width: thin;
+        border-end-start-radius: 25px;
+        border-inline-end: 12px solid green" >
+        <p>
+          {% for dt in data %}
+
+          {% include 'data.html' %}
+
+          {% endfor %}
+        </p>
+        </button>
+      
+    
     </article>
     </section>
 
@@ -195,16 +224,17 @@
     <br/>
       
     
-    <h3> About us </h3>
+    <h3 class='text-center'> About us </h3>
       <p> TODO - show the section here </p>
-      <button style = "font-size:14; font-family: Arial, Helvetica, sans-serif;           background-color:rgba(18,13,8,0.3) ; border: 2px rgba(18,13,9.0.4);
+      <button type = "button" class="btn btn-primary" style = "font-size:14; font-family: Arial, Helvetica, sans-serif;
+        background-color:rgba(18,13,8,0.3);
         writing-mode: rtl;
         button-size: 70px;
         border-right-width: thin;
         border-bottom-width: thin;
-         border-inline-start: 12px solid green;
+        border-inline-start: 12px solid green;
         border-end-end-radius: 15px">
-        contact Us 
+        Contact Us 
       </button>
 
     <br/>
@@ -222,7 +252,7 @@
     
 
     <footer>
-      <p> <img src= 'https://f9c922cd-2145-4129-a114-4249093d3dee-00-hgig41wjoba0.sisko.replit.dev/static/banner.jpeg' height='10''> address</p>
+      <p> <img src= 'https://f9c922cd-2145-4129-a114-4249093d3dee-00-hgig41wjoba0.sisko.replit.dev/static/banner.jpeg' height='20''> address</p>
       <ul>
       <a href="">
         <img src="">
