--- a/templates/Home.html
+++ b/templates/Home.html
@@ -106,6 +106,7 @@
      background-position: center;
      background-color:rgba(20,15, 10, 0.5);
      ">
+    
 
     
      
@@ -114,6 +115,7 @@
     </h1>
     <!-- <img src = 'https://f9c922cd-2145-4129-a114-4249093d3dee-00-hgig41wjoba0.sisko.replit.dev/static/banner.jpeg' height = '70''>  -->
   
+    {% include 'navbar.html'%}
     
     <header>
       <h1 style="font-size: 30; font-family:Times New Roman"; text-alig: centre">
@@ -220,8 +222,7 @@
     <hr>
     <hr>
 
-    <br/>
-    <br/>
+    
       
     
     <h3 class='text-center'> About us </h3>
@@ -237,10 +238,7 @@
         Contact Us 
       </button>
 
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+   
     
     <hr>
     <hr>
