--- a/templates/Home.html
+++ b/templates/Home.html
@@ -242,15 +242,11 @@
     
     <hr>
     <hr>
-    
-    <br/>
-    <br/>
- 
 
     
-
     <footer>
-      <p> <img src= 'https://f9c922cd-2145-4129-a114-4249093d3dee-00-hgig41wjoba0.sisko.replit.dev/static/banner.jpeg' height='20''> address</p>
+      {% include 'footer.html'%}
+      <p> </p>
       <ul>
       <a href="">
         <img src="">
