--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,7 +12,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
 
       <!-- Twitter -->
@@ -21,7 +21,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
 
       <!-- Google -->
@@ -30,7 +30,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
 
       <!-- Instagram -->
@@ -39,7 +39,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
 
       <!-- Linkedin -->
@@ -48,7 +48,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
       <!-- Github -->
       <a
@@ -56,7 +56,7 @@
         href="#!"
         role="button"
         data-mdb-ripple-color="dark"
-        ><img scr= ''></i
+        ><img scr= ''></img
       ></a>
     </section>
     <!-- Section: Social media -->
@@ -66,7 +66,7 @@
   <!-- Copyright -->
   <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2024 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-dark" href="https://hpuniv.ac.in/university-detail/home.php?uiit">University Institute of Technology</a>
   </div>
   <!-- Copyright -->
 </footer>
